Refactored index page to new Bootstrap syntax, cards. Updated page titles for better readability. Removed reset - no need, Bootstrap has its own. Fixed order of CSS includes in main template- app styles should come after vendor.

--- a/static/css/pages/index.css
+++ b/static/css/pages/index.css
@@ -2,3 +2,35 @@
     font-size: 1.5rem;
     margin: 1rem 0;
 }
+
+.classifiers__card {
+    padding: 0;
+    margin-bottom: 2rem;
+    text-align: center;
+}
+
+.classifiers__card-image {
+    /*margin-bottom: 1rem;*/
+}
+
+.classifiers__card-headline {
+    color: --main-color;
+}
+
+.classifiers__card-body {
+    margin: 0;
+    padding: 1rem;
+}
+
+.classifiers__card-text { 
+    line-height: 1.3rem;
+}
+
+.classifiers__card-text--secondary {
+    color: #aaa;
+    margin: 0.5rem;
+}
+
+.classifiers__card-wrapper {
+    padding: 1rem;
+}
